--- a/templates/api.html
+++ b/templates/api.html
@@ -155,7 +155,7 @@
 			"status": "Выясняется",<br>
 			"user_id": "9"<br>
 		  } </td>
-		  <td>БЛЯТЬ!!!! без доп настроек хидера, просто в боди-форм ебашишь поля где все они текстовые кроме поля photos - они типа file</td>
+		  <td>ВНИМАНИЕ!!!! без доп настроек хидера, просто в боди-форм пуляешь поля где все они текстовые кроме поля photos - они типа file</td>
 		</tr>
 	  </tbody>
 	</table>
@@ -176,7 +176,7 @@
 			"email":"iza@mail.com",<br>
 			"arrive_date":"22.12.2222",<br>
 			"event_format":"прогулка по лесу",<br>
-			"event_aim":"сфоткать белку и ахуеть",<br>
+			"event_aim":"сфоткать белку и удивиться",<br>
 			"media":"фотографии",<br>
 			"status":"2",<br>
 			"oopt":"Волжский заповедник",<br>
@@ -185,7 +185,7 @@
 		<td>1) Неверные форматы входных данных <br>
 			2) Заявка обработана в бд</td>
 		<td>status - цифра от 0 до 9 <br>
-			email - пример: penis@mail.ru <br>
+			email - пример: pen@mail.ru <br>
 			arrive_date - формат 22.12.2024<br></td>
 	  </tr>
 	</tbody>
@@ -280,7 +280,7 @@
 			"sex": "m",<br>
 			"sname": "Казаков"<br>
 		  }<br><br>
-			если логинится полупидр а не модер или админ то в json летит повестка нахуй <br></td>
+			если логинится кто-то а не модер или админ то в json летит повестка с запретом <br></td>
 	  </tr>
 	</tbody>
   </table>
@@ -346,7 +346,7 @@
 				  "6": {<br>
 					"arrive_date": "24.12.2222",<br>
 					"email": "iza@mail.com",<br>
-					"event_aim": "сфоткать белку и ахуеть",<br>
+					"event_aim": "сфоткать белку и удивиться",<br>
 					"event_format": "прогулка по лесу",<br>
 					"media": "прогулка",<br>
 					"oopt": "Волжский заповедник",<br>
@@ -356,7 +356,7 @@
 				  "7": {<br>
 					"arrive_date": "24.12.2222",<br>
 					"email": "iza@mail.com",<br>
-					"event_aim": "сфоткать белку и ахуеть",<br>
+					"event_aim": "сфоткать белку и удивиться",<br>
 					"event_format": "прогулка по лесу",<br>
 					"media": "фотографии",<br>
 					"oopt": "Краснодарский заповедник",<br>
@@ -415,7 +415,7 @@
 				  "9": {<br>
 					"proposal_arrive_date": "24.12.2222",<br>
 					"proposal_email": "iza@mail.com",<br>
-					"proposal_evemt_aim": "сфоткать белку и ахуеть",<br>
+					"proposal_evemt_aim": "сфоткать белку и удивиться",<br>
 					"proposal_event_format": "прогулка по лесу",<br>
 					"proposal_media": "прогулка",<br>
 					"proposal_oopt": "Волжский заповедник",<br>
