--- a/templates/api.html
+++ b/templates/api.html
@@ -580,12 +580,18 @@
 							  <td>Ожидает фото в виде файлов</td>
 							  <td>{<br>
 								"message": "Все гуд",<br>
-								"predict": {<br>
+								"predict_deforestation": {<br>
+								  "31.jpg": "вырубка",<br>
+								  "555.jpg": "не вырубка",<br>
+								  "image_156.0_50.0_156.09_50.1.jpg": "вырубка"<br>
+								},<br>
+								"predict_fumes": {<br>
 								  "31.jpg": "гарь",<br>
-								  "555.jpg": "не гарь"<br>
+								  "555.jpg": "не гарь",<br>
+								  "image_156.0_50.0_156.09_50.1.jpg": "гарь"<br>
 								}<br>
 							  }<br></td>
-							  <td> Предик "гарь"/"не гарь" по фото</td>
+							  <td> Предик "гарь"/"не гарь" и "вырубка"/"не вырубка"по фото</td>
 							</tr>
 						  </tbody>
 						</table>
